--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Hello Everyone!!</h1>
     <p>This is a paragraph on my website!!</p>
+    <p>This is another paragraph. There's really not much info on here lol.</p>
 </body>
 </html>
