--- a/index.html
+++ b/index.html
@@ -2,15 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
 </head>
 <body>
-    <h1>Hello Everyone!!</h1>
-    <p>This is a paragraph on my website!!</p>
-    <p>This is another paragraph. There's really not much info on here lol.</p>
-    <p>skjfslkdjflksdja</p>
+
+  <header>
+    <a href="index.html">About |  </a>
+    <a href="portfolio.html">Portfolio |  </a>
+    <a href="contact.html">Contact</a>
+
+    <div id="name">Kayla Gordon</div>
+  </header>
+   
+
+  <div class="wrapper">
+    <h1>About Me</h1>
+    <hr>
+    <section>
+      <p>I am currently a student in the SMU Trilogy full stack coding bootcamp. I am extremely new to the world of web development but I am very willing to learn and very excited to create using these new tools. A couple things about me:
+      </p>
+  
+      <p>I graduated from Vanderbilt University with a Psychology degree. Not very useful in this field, I know, I basically did a complete 180. But for the past couple years since I graduated, I have been mostly working as a server in restaurants. This allowed me to (kind of, and loosely) use my degree by studying people: their habits, their desires, how they behave when they really want something (e.g. food, alcohol, attention). I also learned the art of selling. As a server you learn very quickly that an easy way to get your ticket price up, is to upsell. And you upsell by getting a person to believe that what you’re selling them is worth it, by playing on their thoughts and emotions with the tools at your disposal, say your vocal inflection, your facial expressions, general body language.
+      </p>
+
+      <p>I graduated from Vanderbilt University with a Psychology degree. Not very useful in this field, I know, I basically did a complete 180. But for the past couple years since I graduated, I have been mostly working as a server in restaurants. This allowed me to (kind of, and loosely) use my degree by studying people: their habits, their desires, how they behave when they really want something (e.g. food, alcohol, attention). I also learned the art of selling. As a server you learn very quickly that an easy way to get your ticket price up, is to upsell. And you upsell by getting a person to believe that what you’re selling them is worth it, by playing on their thoughts and emotions with the tools at your disposal, say your vocal inflection, your facial expressions, general body language.
+      </p>
+
+      <p>Dealing with coworkers has taught me a whole different host of skills. It’s accurate to say that in the service industry, your coworkers become kind of like family, at least in the sense that you know everything about each other. You spend so much time with them, and have so little boundaries (both physical and emotional) that everyone ends up knowing your likes, dislikes, habits, hangups. And you have to be able to navigate all of that, with everyone, on a daily basis. No easy task, but I’ve come to be quite successful at it.
+      </p>
+
+  </div>
+    
 </body>
 </html>
