--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,19 @@
 <body>
 
     <header>
-        <a href="index.html">About |</a>
-        <a href="portfolio.html">Portfolio |</a>
-        <a href="contact.html">Contact</a>
-
-        <div id="name">Kayla Gordon</div>
     </header>
     
     <div class="content">
         <div class="wrapper">
+
+          <div class="header-text">
+            <a href="index.html">About |  </a>
+            <a href="portfolio.html">Portfolio |  </a>
+            <a href="contact.html">Contact</a>
+          </div>
+                
+          <div class="name" id="name2">Kayla Gordon</div>
+
          <h1>Contact</h1>
 
          <hr>
