--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 </head>
 <body>
 
-  <header>
-    <a href="index.html">About |  </a>
-    <a href="portfolio.html">Portfolio |  </a>
-    <a href="contact.html">Contact</a>
+    <header>
+    </header>
 
-    <div id="name">Kayla Gordon</div>
-  </header>
-   
-  <div class="content">
-  <div class="wrapper">
+<div class="content">
+    <div class="wrapper">
+
+      <div class="header-text">
+        <a href="index.html">About |  </a>
+        <a href="portfolio.html">Portfolio |  </a>
+        <a href="contact.html">Contact</a>
+      </div>
+        
+      <div class="name">Kayla Gordon</div>
+
     <h1>About Me</h1>
     <hr>
     <section>
-      <img class="image" id="me" src="assets/images/placeholder.png" alt="Kayla Gordon"/>
+      <img class="image" id="me" src="assets/images/me.jpg" alt="Kayla Gordon"/>
 
       <p>I am currently a student in the SMU Trilogy full stack coding bootcamp. I am extremely new to the world of web development but I am very willing to learn and very excited to create using these new tools. A couple things about me:
       </p>
